cmake_minimum_required(VERSION 3.11)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(CMakeParseArguments)
include(GNUInstallDirs)
include(Helpers.cmake)

project(GraphicsEngine)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(WANLIX_BUILD_EDITOR     ON  CACHE BOOL "")
set(WANLIX_ENABLE_VULKAN    ON  CACHE BOOL "")
set(WANLIX_ENABLE_D3D12     OFF CACHE BOOL "")

set(RSD "${CMAKE_CURRENT_SOURCE_DIR}")
set(RBD "${CMAKE_CURRENT_BINARY_DIR}")

add_subdirectory(engine)
if (WANLIX_BUILD_EDITOR)
    add_subdirectory(editor)
endif()