cmake_minimum_required(VERSION 3.11)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
include(CMakeParseArguments)
include(GNUInstallDirs)

project(GraphicsEngine)
set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(WANLI_ENABLE_VULKAN     ON  CACHE BOOL "")
set(WANLI_ENABLE_D3D12      OFF CACHE BOOL "")
set(WINDOWS ON CACHE BOOL "")
set(ANDROID OFF CACHE BOOL "")

set(BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}")

add_subdirectory(Engine/Wanli)
add_subdirectory(Samples/ModelViewer)