CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(NTGSTest)
SET(TARGET NTGSTest)
SET(NTGS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../NTGS/Source)

ADD_SUBDIRECTORY(ThirdParty/gtest/NTGS)

FILE(GLOB_RECURSE TEST_SRCS Source/*.cpp)
FILE(GLOB_RECURSE TEST_HDRS Source/*.h)

INCLUDE_DIRECTORIES(ThirdParty ${NTGS_SOURCE_DIR})
ADD_EXECUTABLE(${TARGET} ${TEST_SRCS} ${TEST_HDRS})
SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER UniteTests)
TARGET_LINK_LIBRARIES(${TARGET} PRIVATE gtest NTGS)
