add_executable(Editor "${RSD}/dummy.cpp")
if (NOT GE_OUTPUT_WITH_CONFIG_SUBDIR)
    get_target_property(_outdir_ Editor RUNTIME_OUTPUT_DIRECTORY)
    get_target_property(_libdir_ Editor LIBRARY_OUTPUT_DIRECTORY)
    set_target_properties(Editor PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG          "${_outdir_}")
    set_target_properties(Editor PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE        "${_outdir_}")
    set_target_properties(Editor PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINISIZEREL    "${_outdir_}")
    set_target_properties(Editor PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${_outdir_}")
    set_target_properties(Editor PROPERTIES LIBRARY_OUTPUT_DIRECTORY_DEBUG          "${_libdir_}")
    set_target_properties(Editor PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELEASE        "${_libdir_}")
    set_target_properties(Editor PROPERTIES LIBRARY_OUTPUT_DIRECTORY_MINISIZEREL    "${_libdir_}")
    set_target_properties(Editor PROPERTIES LIBRARY_OUTPUT_DIRECTORY_RELWITHDEBINFO "${_libdir_}")
endif()

set(CSD "${CMAKE_CURRENT_SOURCE_DIR}")
file(GLOB_RECURSE _headers_    "${CSD}/include/*.h" "${CSD}/include/*.hpp")
file(GLOB_RECURSE _sources_    "${CSD}/source/*.c"  "${CSD}/source/*.cpp")
source_group(TREE "${CSD}/include"  PREFIX "Header Files" FILES ${_headers_})
source_group(TREE "${CSD}/source"   PREFIX "Source Files" FILES ${_sources_})
target_sources(Editor PRIVATE ${_headers_} ${_sources_})
target_link_libraries(Editor PRIVATE Render)

target_include_directories(Editor PRIVATE "${CSD}/include")
target_include_directories(Editor PRIVATE "${CSD}/source")
target_include_directories(Editor PRIVATE "${CSD}")
target_link_libraries(Editor PRIVATE Core3D)

get_target_property(_outdir_ Editor RUNTIME_OUTPUT_DIRECTORY)
message(STATUS "Target: Editor -> ${_outdir_}" )